# knowhere

./: .gitmodules  CMakeLists.txt  build_integrated_jvector.sh  build_jni_test.sh  build_jvector_from_source.sh  build_standalone_jvector.sh  jni_test  jni_test.cpp  run_jvector_comprehensive_test.sh
cmake/: jvector.cmake  toolchain.cmake
include/knowhere/comp/: index_param.h
include/knowhere/index/: index_table.h
java_test/: JVectorComprehensiveTest.java  JVectorTest.java
src/index/: index_static.cc
src/index/ivf/: ivfrbq_wrapper.cc
src/index/jvector/: JVectorIndex.cpp  JVectorIndex.h  register.cpp
src/index/jvector/impl/: JVectorIndexWrapper.cpp  JVectorIndexWrapper.h
tests/: jvector_test.cpp
tests/ut/: CMakeLists.txt  test_ivfrabitq.cc  test_jvector_index.cc
